--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,8 +76,8 @@ env_logger = "0.10.0"
 thiserror = "1.0.57"
 log = "0.4"
 
-shadowsocks = { version = "1.16" }
-shadowsocks-service = { version = "1.16" }
+shadowsocks = "1.20.3"
+shadowsocks-service = "1.20.3"
 
 windows-sys = "0.52.0"
 
