--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -68,8 +68,8 @@ log = "0.4"
 colored = "2.0.0"
 
 # Proxy protocols
-shadowsocks = { version = "1.16" }
-shadowsocks-service = { version = "1.16" }
+shadowsocks = "1.20.3"
+shadowsocks-service = "1.20.3"
 
 windows-sys = "0.52.0"
 chrono = { version = "0.4.26", default-features = false }
