--- a/.github/workflows/cargo-audit.yml
+++ b/.github/workflows/cargo-audit.yml
@@ -29,7 +29,9 @@ jobs:
           # Ignored audit issues. This list should be kept short, and effort should be
           # put into removing items from the list.
           # RUSTSEC-2023-0079 - KyberSlash in `pqc_kyber`.
-          ignore: RUSTSEC-2023-0079
+          # RUSTSEC-2024-0370 - `proc-macro-error` is unmaintained.
+          # `nftnl 0.6.2` uses `proc-macro-error`.
+          ignore: RUSTSEC-2023-0079,RUSTSEC-2024-0370
 
       - uses: actions-rust-lang/audit@v1.1.11
         name: Audit testrunner Rust Dependencies
@@ -39,4 +41,6 @@ jobs:
           # Ignored audit issues. This list should be kept short, and effort should be
           # put into removing items from the list.
           # RUSTSEC-2023-0079 - KyberSlash in `pqc_kyber`.
-          ignore: RUSTSEC-2023-0079
+          # RUSTSEC-2024-0370 - `proc-macro-error` is unmaintained.
+          # `nftnl 0.6.2` uses `proc-macro-error`.
+          ignore: RUSTSEC-2023-0079,RUSTSEC-2024-0370
