--- a/mullvad-ios/Cargo.toml
+++ b/mullvad-ios/Cargo.toml
@@ -20,6 +20,7 @@ tunnel-obfuscation = { path = "../tunnel-obfuscation" }
 oslog = "0.2"
 talpid-types = { path = "../talpid-types" }
 talpid-tunnel-config-client = { path = "../talpid-tunnel-config-client" }
+mullvad-encrypted-dns-proxy = { path = "../mullvad-encrypted-dns-proxy" }
 
 shadowsocks-service = { workspace = true, features = [
     "local",
