--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -5,16 +5,16 @@
 # https://github.com/gradle/gradle/issues/19228
 android-gradle-plugin = "8.3.0"
 android-gradle-aapt = "10880808"
-android-billingclient = "6.2.0"
+android-billingclient = "7.0.0"
 android-volley = "1.2.1"
 
 # AndroidX
-androidx-activitycompose = "1.9.1"
+androidx-activitycompose = "1.9.2"
 androidx-appcompat = "1.7.0"
 androidx-ktx = "1.13.1"
 androidx-coresplashscreen = "1.1.0-rc01"
 androidx-espresso = "3.6.1"
-androidx-lifecycle = "2.8.4"
+androidx-lifecycle = "2.8.5"
 androidx-test = "1.6.1"
 androidx-testmonitor = "1.7.1"
 androidx-testorchestrator = "1.5.0"
@@ -25,15 +25,15 @@ androidx-uiautomator = "2.4.0-alpha01"
 arrow = "1.2.4"
 
 # Compose
-compose = "1.7.0-beta06"
-compose-destinations = "2.1.0-beta10"
+compose = "1.7.1"
+compose-destinations = "2.1.0-beta12"
 compose-constraintlayout = "1.0.1"
-compose-material3 = "1.3.0-beta04"
+compose-material3 = "1.3.0"
 
-grpc = "1.65.1"
+grpc = "1.66.0"
 grpc-kotlin = "1.4.1"
 grpc-kotlin-jar = "1.4.1:jdk8@jar"
-grpc-protobuf = "4.27.2"
+grpc-protobuf = "4.28.1"
 
 # Koin
 koin = "3.5.6"
@@ -42,26 +42,26 @@ koin-compose = "3.5.6"
 # Kotlin
 # Bump kotlin and kotlin-ksp together, find matching release here:
 # https://github.com/google/ksp/releases
-kotlin = "2.0.0"
-kotlin-ksp = "2.0.0-1.0.22"
-kotlinx = "1.8.1"
+kotlin = "2.0.20"
+kotlin-ksp = "2.0.20-1.0.25"
+kotlinx = "1.9.0"
 
 # Protobuf
 protobuf = "0.9.4"
 
 # Misc
 commonsvalidator = "1.9.0"
-dependency-check = "10.0.3"
+dependency-check = "10.0.4"
 dependency-versions = "0.51.0"
-detekt = "1.23.6"
-jodatime = "2.12.7"
+detekt = "1.23.7"
+jodatime = "2.13.0"
 kermit = "2.0.4"
-konsist = "0.15.1"
+konsist = "0.16.1"
 ktfmt = "0.20.1"
-leakcanary = "2.13"
+leakcanary = "2.14"
 mockk = "1.13.12"
 mockwebserver = "4.12.0"
-play-publisher = "3.9.0"
+play-publisher = "3.11.0"
 turbine = "1.1.0"
 
 [libraries]
