--- a/.github/workflows/android-audit.yml
+++ b/.github/workflows/android-audit.yml
@@ -84,6 +84,11 @@ jobs:
       - name: Fix git dir
         run: git config --global --add safe.directory $(pwd)
 
+      - name: Copy maybenot machines to asset directory
+        run: |
+          mkdir -p android/app/build/extraAssets
+          cp dist-assets/maybenot_machines android/app/build/extraAssets/maybenot_machines
+
       - name: Re-generate lockfile
         run: android/scripts/update-lockfile.sh
 
