--- a/mullvad-obfuscated-dns-proxy/Cargo.toml
+++ b/mullvad-obfuscated-dns-proxy/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "mullvad-obfuscated-dns-proxy"
+description = "A port forwarding proxy that retrieves its configuration from a AAAA record over DoH"
 authors.workspace = true
 repository.workspace = true
 license.workspace = true
