--- a/mullvad-encrypted-dns-proxy/Cargo.toml
+++ b/mullvad-encrypted-dns-proxy/Cargo.toml
@@ -11,7 +11,7 @@ rust-version.workspace = true
 workspace = true
 
 [dependencies]
-tokio = { workspace = true }
+tokio = { workspace = true, features = [ "macros" ] }
 byteorder = "1"
 hickory-resolver = { version = "0.24.1", features = [ "dns-over-https-rustls" ]}
 webpki-roots = "0.25.0"
