Update linting packages

--- a/gui/package.json
+++ b/gui/package.json
@@ -32,10 +32,12 @@
     "nseventmonitor": "^1.0.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@playwright/test": "^1.41.1",
     "@types/chai": "^4.3.3",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-spies": "^1.0.3",
+    "@types/eslint__js": "^8.42.3",
     "@types/gettext-parser": "^4.0.1",
     "@types/google-protobuf": "^3.15.6",
     "@types/history": "^4.7.11",
@@ -48,8 +50,6 @@
     "@types/sinon": "^10.0.13",
     "@types/sprintf-js": "^1.1.2",
     "@types/topojson-specification": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.0",
     "browserify": "^17.0.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
@@ -58,11 +58,13 @@
     "electron": "^30.0.4",
     "electron-builder": "^24.13.3",
     "electron-devtools-installer": "^3.2.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.2",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "gettext-extractor": "^3.5.4",
+    "globals": "^15.9.0",
     "grpc_tools_node_protoc_ts": "^5.3.2",
     "gulp": "^4.0.2",
     "gulp-inject-string": "^1.1.2",
@@ -71,11 +73,12 @@
     "mocha": "^10.2.0",
     "playwright": "^1.41.1",
     "postject": "^1.0.0-alpha.6",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "sinon": "^14.0.1",
     "ts-node": "^10.9.2",
     "tsc-watch": "^5.0.3",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^8.6.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "xvfb-maybe": "^0.2.1"
@@ -86,7 +89,7 @@
     "build-proto": "gulp build-proto",
     "pack-test-executable": "./scripts/build-test-executable.sh",
     "build-test-executable": "npm run build && npm run pack-test-executable",
-    "lint": "eslint --ext tsx,ts .",
+    "lint": "eslint .",
     "format": "prettier \"**/*.{js,css,ts,tsx}\" --write",
     "tsc": "tsc -p . --noEmit",
     "e2e": "npm run build && npm run e2e:no-build",
