--- a/talpid-tunnel-config-client/Cargo.toml
+++ b/talpid-tunnel-config-client/Cargo.toml
@@ -14,9 +14,11 @@ workspace = true
 log = { workspace = true }
 rand = "0.8"
 talpid-types = { path = "../talpid-types" }
+futures = { workspace = true }
 tonic = { workspace = true }
 tower = { workspace = true }
 prost = { workspace = true }
+hyper-util = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 classic-mceliece-rust = { version = "2.0.0", features = [
     "mceliece460896f",
