--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,11 +69,12 @@ tokio = { version = "1.8" }
 parity-tokio-ipc = "0.9"
 futures = "0.3.15"
 # Tonic and related crates
-tonic = "0.10.0"
+tonic = "0.12.2"
 tonic-build = { version = "0.10.0", default-features = false }
 tower = "0.4"
-prost = "0.12.0"
-prost-types = "0.12.0"
+prost = "0.13.3"
+prost-types = "0.13.3"
+hyper-util = "0.1.8"
 
 env_logger = "0.10.0"
 thiserror = "1.0.57"
