--- a/mullvad-daemon/Cargo.toml
+++ b/mullvad-daemon/Cargo.toml
@@ -19,7 +19,7 @@ chrono = { workspace = true }
 thiserror = { workspace = true }
 either = "1.11"
 fern = { version = "0.6", features = ["colored"] }
-futures = "0.3"
+futures = { workspace = true }
 libc = "0.2"
 log = { workspace = true }
 regex = "1.0"
