--- a/mullvad-management-interface/Cargo.toml
+++ b/mullvad-management-interface/Cargo.toml
@@ -22,7 +22,7 @@ tonic = { workspace = true }
 tower = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
-futures = "0.3"
+futures = { workspace = true }
 tokio = { workspace = true, features =  ["rt"] }
 parity-tokio-ipc = { workspace = true }
 
