--- a/talpid-core/Cargo.toml
+++ b/talpid-core/Cargo.toml
@@ -13,7 +13,7 @@ workspace = true
 [dependencies]
 chrono = { workspace = true, features = ["clock"] }
 thiserror = { workspace = true }
-futures = "0.3.15"
+futures = { workspace = true }
 ipnetwork = { workspace = true }
 libc = "0.2"
 log = { workspace = true }
