--- a/talpid-openvpn/Cargo.toml
+++ b/talpid-openvpn/Cargo.toml
@@ -13,7 +13,7 @@ workspace = true
 [dependencies]
 async-trait = "0.1"
 thiserror = { workspace = true }
-futures = "0.3.15"
+futures = { workspace = true }
 log = { workspace = true }
 shell-escape = "0.1"
 talpid-routing = { path = "../talpid-routing" }
