--- a/talpid-routing/Cargo.toml
+++ b/talpid-routing/Cargo.toml
@@ -12,7 +12,7 @@ workspace = true
 
 [dependencies]
 thiserror = { workspace = true }
-futures = "0.3.15"
+futures = { workspace = true }
 ipnetwork = { workspace = true }
 log = { workspace = true }
 tokio = { workspace = true, features = ["process", "rt-multi-thread", "net", "io-util", "time"] }
