--- a/talpid-windows/Cargo.toml
+++ b/talpid-windows/Cargo.toml
@@ -13,7 +13,7 @@ workspace = true
 [target.'cfg(windows)'.dependencies]
 thiserror = { workspace = true }
 socket2 = { version = "0.5.3" }
-futures = "0.3.15"
+futures = { workspace = true }
 
 talpid-types = { path = "../talpid-types" }
 
