--- a/talpid-wireguard/Cargo.toml
+++ b/talpid-wireguard/Cargo.toml
@@ -12,7 +12,7 @@ workspace = true
 
 [dependencies]
 thiserror = { workspace = true }
-futures = "0.3.15"
+futures = { workspace = true }
 hex = "0.4"
 ipnetwork = { workspace = true }
 once_cell = { workspace = true }
