--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ unused_async = "deny"
 [workspace.dependencies]
 tokio = { version = "1.8" }
 parity-tokio-ipc = "0.9"
+futures = "0.3.15"
 # Tonic and related crates
 tonic = "0.12.2"
 tonic-build = { version = "0.10.0", default-features = false }
