--- a/mullvad-management-interface/Cargo.toml
+++ b/mullvad-management-interface/Cargo.toml
@@ -23,7 +23,7 @@ tower = { workspace = true }
 hyper-util = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
-futures = "0.3"
+futures = { workspace = true }
 tokio = { workspace = true, features =  ["rt"] }
 parity-tokio-ipc = { workspace = true }
 
