--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -36,7 +36,7 @@ single_use_lifetimes = "warn"
 unused_async = "deny"
 
 [workspace.dependencies]
-futures = "0.3"
+futures = { workspace = true }
 tokio = { version = "1.8", features = [
   "macros",
   "rt",
