Update to `hyper` version 1 echosystem for e2e tests

--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -60,6 +60,7 @@ tower = "0.4"
 prost = "0.13.3"
 prost-types = "0.13.3"
 tarpc = { version = "0.30", features = ["tokio1", "serde-transport", "serde1"] }
+hyper-util = {version = "0.1.8", features = ["client", "client-legacy", "http2"]}
 
 # Logging
 env_logger = "0.11.0"
