--- a/test/test-manager/Cargo.toml
+++ b/test/test-manager/Cargo.toml
@@ -49,7 +49,7 @@ socks-server = { path = "../socks-server" }
 env_logger = { workspace = true }
 
 tonic = { workspace = true }
-hyper-util = "0.1.8"
+hyper-util = { workspace = true }
 tower = { workspace = true }
 colored = { workspace = true }
 
