--- a/test/test-rpc/Cargo.toml
+++ b/test/test-rpc/Cargo.toml
@@ -23,10 +23,12 @@ log = { workspace = true }
 colored = { workspace = true }
 async-trait = { workspace = true }
 
-hyper = { version = "0.14.23", features = ["client", "http2"] }
-hyper-rustls = { version = "0.24", features = ["log", "webpki-roots"] }
-tokio-rustls = "0.24"
-rustls-pemfile = "0.2"
+hyper = { version = "1.4.1", features = ["client", "http2"] }
+hyper-rustls = { version = "0.27.3", features = ["log", "webpki-roots"] }
+hyper-util = {workspace = true}
+http-body-util = "0.1.2"
+tokio-rustls = "0.26.0"
+rustls-pemfile = "2.1.3"
 
 [dependencies.tokio-util]
 version = "0.7"
