--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -5,7 +5,7 @@
 # https://github.com/gradle/gradle/issues/19228
 android-gradle-plugin = "8.6.1"
 android-gradle-aapt = "11315950"
-android-billingclient = "7.0.0"
+android-billingclient = "7.1.0"
 android-volley = "1.2.1"
 
 # AndroidX
@@ -14,7 +14,7 @@ androidx-appcompat = "1.7.0"
 androidx-ktx = "1.13.1"
 androidx-coresplashscreen = "1.1.0-rc01"
 androidx-espresso = "3.6.1"
-androidx-lifecycle = "2.8.5"
+androidx-lifecycle = "2.8.6"
 androidx-test = "1.6.1"
 androidx-testmonitor = "1.7.1"
 androidx-testorchestrator = "1.5.0"
@@ -25,19 +25,20 @@ androidx-uiautomator = "2.4.0-alpha01"
 arrow = "1.2.4"
 
 # Compose
-compose = "1.7.1"
+compose = "1.7.2"
 compose-destinations = "2.1.0-beta12"
 compose-constraintlayout = "1.0.1"
 compose-material3 = "1.3.0"
 
+# Await resolution of https://github.com/grpc/grpc-java/issues/11550 before updating.
 grpc = "1.66.0"
 grpc-kotlin = "1.4.1"
 grpc-kotlin-jar = "1.4.1:jdk8@jar"
 grpc-protobuf = "4.28.1"
 
 # Koin
-koin = "3.5.6"
-koin-compose = "3.5.6"
+koin = "4.0.0"
+koin-compose = "4.0.0"
 
 # Kotlin
 # Bump kotlin and kotlin-ksp together, find matching release here:
