--- a/android/lib/common/src/main/AndroidManifest.xml
+++ b/android/lib/common/src/main/AndroidManifest.xml
@@ -1,4 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
-</manifest>
+<manifest />
