--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -65,7 +65,13 @@ jobs:
         shell: bash
         run: npm test
 
-      - name: Run Playwright tests
+      - name: Run Playwright tests on Linux
+        if: runner.os == 'Linux'
+        working-directory: gui
+        run: NO_SANDBOX=1 npm run e2e:no-build
+
+      - name: Run Playwright tests on Windows
+        if: runner.os != 'Linux'
         working-directory: gui
         shell: bash
         run: npm run e2e:no-build
