--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -41,7 +41,7 @@ koin = "4.0.0"
 koin-compose = "4.0.0"
 
 # Ktor
-ktor = "3.0.0-beta-2"
+ktor = "3.0.0"
 
 # Kotlin
 # Bump kotlin and kotlin-ksp together, find matching release here:
