Fix syntax error

--- a/.github/workflows/ios-end-to-end-tests.yml
+++ b/.github/workflows/ios-end-to-end-tests.yml
@@ -82,7 +82,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           clean: true
-          ref: {{ github.event.inputs.commit_hash }}
+          ref: ${{ github.event.inputs.commit_hash }}
           path: app-working-directory
 
       - name: Configure Rust
