--- a/.github/actions/build-ios-e2e-tests/action.yml
+++ b/.github/actions/build-ios-e2e-tests/action.yml
@@ -25,6 +25,9 @@ inputs:
   outputs_path:
     description: 'Path to store outputs. This should be unique for each job run in order to avoid concurrency issues.'
     required: true
+  working_directory:
+    description: 'Path to build test.'
+    required: true
 
 runs:
   using: 'composite'
@@ -56,7 +59,7 @@ runs:
             "/UNINSTALL_APP_IN_TEST_SUITE_TEAR_DOWN =/ s#= .*#= 0#" \
             UITests.xcconfig
       shell: bash
-      working-directory: ios/Configurations
+      working-directory: ${{ inputs.working_directory }}/ios/Configurations
       env:
         IOS_DEVICE_PIN_CODE: ${{ inputs.ios_device_pin_code }}
         TEST_DEVICE_IDENTIFIER_UUID: ${{ inputs.test_device_identifier_uuid }}
@@ -79,7 +82,7 @@ runs:
           -derivedDataPath derived-data \
           clean build-for-testing 2>&1
       shell: bash
-      working-directory: ios/
+      working-directory: ${{ inputs.working_directory }}/ios/
       env:
         TEST_DEVICE_UDID: ${{ inputs.test_device_udid }}
         TEST_NAME: ${{ inputs.test_name }}
