--- a/.github/workflows/ios-end-to-end-tests-settings-migration.yml
+++ b/.github/workflows/ios-end-to-end-tests-settings-migration.yml
@@ -64,7 +64,7 @@ jobs:
     uses: ./.github/workflows/ios-end-to-end-tests.yml
     with:
       arg_tests_json_key: "MullvadVPNUITestsChangeDNSSettings"
-      commit_hash: env.OLD_APP_COMMIT_HASH
+      commit_hash: ${{ env.OLD_APP_COMMIT_HASH }}
     secrets: inherit
   verify_dns_settings:
     name: Verify DNS Settings Still Changed on Current App Version
@@ -72,7 +72,7 @@ jobs:
     uses: ./.github/workflows/ios-end-to-end-tests.yml
     with:
       arg_tests_json_key: "MullvadVPNUITestsVerifyDNSSettingsChanged"
-      commit_hash: ''
+      commit_hash: ${{ '' }}
     secrets: inherit
   change_other_settings:
     name: Change All Other Settings on Old App Version
@@ -80,7 +80,7 @@ jobs:
     uses: ./.github/workflows/ios-end-to-end-tests.yml
     with:
       arg_tests_json_key: "MullvadVPNUITestsChangeSettings"
-      commit_hash: env.OLD_APP_COMMIT_HASH
+      commit_hash: ${{ env.OLD_APP_COMMIT_HASH }}
     secrets: inherit
   verify_other_settings:
     name: Verify All Other Settings Still Changed on Current App Version
@@ -88,5 +88,5 @@ jobs:
     uses: ./.github/workflows/ios-end-to-end-tests.yml
     with:
       arg_tests_json_key: "MullvadVPNUITestsVerifySettingsChanged"
-      commit_hash: ''
+      commit_hash: ${{ '' }}
     secrets: inherit
